--- a/.github/workflows/build-pelican.yml
+++ b/.github/workflows/build-pelican.yml
@@ -35,7 +35,7 @@ jobs:
           path: blog/output
   deploy:
     needs: build
-    if: github.ref == 'master'
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
