--- a/.github/workflows/build-pelican.yml
+++ b/.github/workflows/build-pelican.yml
@@ -42,6 +42,7 @@ jobs:
       - uses: actions/download-artifact@v1
         with:
           name: output
+          path: ./blog/output
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@v1.3.0
         with:
