--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,7 @@
   "hosting": {
     "public": "./blog/output",
     "ignore": [
+      "original-photos/",
       "firebase.json",
       "**/.*"
     ]
